fix layout on mobile bugs and start EN version

--- a/css/custom.css
+++ b/css/custom.css
@@ -35,4 +35,10 @@
     .parallax_section_1 {
         min-height:90vh;
     }
+    .comment {
+        font-size:15px;
+    }
+    .carousel_testimonials .pic img {
+        display:none;
+    }
 }
